fix(splash): fix overflow in splash in cost of scale

--- a/src/components/SplashMedia/SplashMedia.module.css
+++ b/src/components/SplashMedia/SplashMedia.module.css
@@ -48,8 +48,20 @@
 .top-right .media,
 .bottom-left .media,
 .bottom-right .media {
-  max-width: 350px;
+  height: 60vh;
+  width: auto;
+  max-width: 100vw;
   display: block;
+  object-fit: contain;
+}
+
+@media (orientation: portrait) {
+  .top-left .media,
+  .top-right .media,
+  .bottom-left .media,
+  .bottom-right .media {
+    height: 40vh;
+  }
 }
 
 .gradientOverlay {
